syntax = "proto3";

package stats.service.collector;

import "google/protobuf/empty.proto";

import "stats/message/user_action.proto";

option java_multiple_files = true;
option java_package = "stats.service.collector";

service UserActionController {
  rpc CollectUserAction (stats.message.collector.UserActionProto) returns (google.protobuf.Empty);
}